chore: add SPDX license headers with copyright information to files

--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -1,3 +1,10 @@
+#
+# SPDX-License-Identifier: MIT
+# Copyright (c) 2025 rotgrunegelb
+# Copyright (c) 2025 murder_spagurder (from murderspagurder/mod-template-java)
+# See the LICENSE file in the project root for license terms.
+#
+
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 distributionUrl=https\://services.gradle.org/distributions/gradle-9.2.0-bin.zip
