--- a/versions/1.21.1-neoforge/gradle.properties
+++ b/versions/1.21.1-neoforge/gradle.properties
@@ -1,3 +1,9 @@
+#
+# SPDX-License-Identifier: MIT
+# Copyright (c) 2025 rotgrunegelb
+# See the LICENSE file in the project root for license terms.
+#
+
 deps.minecraft=1.21.1
 deps.neoforge=21.1.213
 
