--- a/cliff.toml
+++ b/cliff.toml
@@ -68,7 +68,7 @@ conventional_commits = true
 # Exclude commits that do not match the conventional commits specification.
 filter_unconventional = false
 # Split commits on newlines, treating each line as an individual commit.
-split_commits = true
+split_commits = false
 # An array of regex based parsers to modify commit messages prior to further processing.
 commit_preprocessors = [
 	# Replace issue numbers with link templates to be updated in `changelog.postprocessors`.
