--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -2,12 +2,13 @@
 # SPDX-License-Identifier: MIT
 # Copyright (c) 2025 rotgrunegelb
 # Copyright (c) 2025 murder_spagurder (from murderspagurder/mod-template-java)
+# Copyright (c) 2025 Greenman999
 # See the LICENSE file in the project root for license terms.
 #
 
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-9.2.0-bin.zip
+distributionUrl=https\://services.gradle.org/distributions/gradle-9.2.1-bin.zip
 networkTimeout=10000
 validateDistributionUrl=true
 zipStoreBase=GRADLE_USER_HOME
