--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -1,7 +1,7 @@
 #
 # SPDX-License-Identifier: MIT
-# Copyright (c) 2025 rotgrunegelb
-# Copyright (c) 2025 murder_spagurder (from murderspagurder/mod-template-java)
+# Copyright (c) 2025 rotgruengelb, and stonecutter-mod-template contributors
+# Copyright (c) 2025 murder_spagurder
 # Copyright (c) 2025 Greenman999
 # See the LICENSE file in the project root for license terms.
 #
