--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -104,7 +104,7 @@ jobs:
           # Try to create the release first
           if ! gh release create "$TAG" \
             --title "$TAG" \
-            --notes-file CHANGELOG.md \
+            --notes-file CHANGELOG-latest.md \
             --latest \
             --verify-tag \
             ./build/libs/$TAG/*; then
@@ -114,7 +114,7 @@ jobs:
             # Update release notes and mark as latest
             gh release edit "$TAG" \
               --title "$TAG" \
-              --notes-file CHANGELOG.md \
+              --notes-file CHANGELOG-latest.md \
               --latest
 
             # Re-upload artifacts (delete first to avoid duplicates)
